databse updated added http quiz

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					<a href="pages/css.html">CSS</a>
                 </div>
             </div> 
-            <a href="references.html">References</a>
-            <a href="quiz.html">Take the quiz</a>
+            <a href="pages/references.html">References</a>
+            <a href="pages/quiz.html">Take the quiz</a>
         </div>
 			
 		</div>
