--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -31,15 +31,13 @@
                         <br>
                         <div class="row">
                             <div class="column">
-                                <a href= "htmlquiz.html"><img src="../images/html.png" class="html" alt="html"></a>
+                                <a href= "htmlquiz.php"><img src="../images/html.png" class="html" alt="html"></a>
                             </div>
                             <div class="column">
-                                <form action="cssquiz.php" method="get" target="_blank">
-                                <a href= ""><img src="../images/css.png" class="css" alt="css"></a>
-                                </form>
+                                <a href= "cssquiz.php"><img src="../images/css.png" class="css" alt="css"></a>
                             </div>
                             <div class="row">
-                                <a href= "httpquiz.html"><img src="../images/http.png" class="http" alt="http"></a>
+                                <a href= "httpquiz.php"><img src="../images/http.png" class="http" alt="http"></a>
                             </div>
                         </div>
                     </div>
